<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".detalles.DetallesUsuario">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/favter1"
        android:text="@string/conocerte"
        android:textColor="@color/azul_oscuro_80"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/nombreDetallesUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/thinoobold"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/azul_oscuro_80"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/apellido1DetallesUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/thinoobold"
            android:hint="@string/apelldo1"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/azul_oscuro_80"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/apellido2DetallesUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/thinoobold"
        android:hint="@string/apellido2_opc"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/azul_oscuro_80"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRol">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="44dp">

            <RadioButton
                android:id="@+id/adminOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thinoobold"
                android:text="@string/admin"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/entrenadorOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thinoobold"
                android:text="@string/entrenador"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/jugadorOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thinoobold"
                android:text="@string/jugador"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/favter1"
        android:text="@string/rol"
        android:textColor="@color/azul_oscuro_80"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido2DetallesUser" />

    <LinearLayout
        android:id="@+id/linearLayoutCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/telefonoDetallesUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textViewCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/thinoobold"
            android:gravity="center"
            android:text="@string/codigo"
            android:textColor="@color/azul_oscuro_80"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/codigoRol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:fontFamily="@font/thinoobold"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textColorHint="@color/azul_oscuro_80"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/telefonoDetallesUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:fontFamily="@font/thinoobold"
        android:hint="@string/telefono_opc"
        android:inputType="textPersonName"
        android:textColorHint="@color/azul_oscuro_80"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/continuarButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/fondo_spinner"
        android:fontFamily="@font/industrial_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/continuar"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/thinoobold"
        android:text="@string/telefono_ejemplo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonoDetallesUser" />

</androidx.constraintlayout.widget.ConstraintLayout>