<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/industrial_light"
            android:text="@string/nombre"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textViewTemporadaGol"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/industrial_light"
            android:text="@string/ejemplo_temporada"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewGoles"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/industrial_light"
            android:text="@string/ejemplo_goles"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textViewDisparos"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/industrial_light"
            android:text="@string/ejemplo_tiros"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>